# cildhdi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cildhdi.sln  code_convert.cpp
BandAccount/: README.md
BandAccount/include/: account.hpp  app.hpp  change.hpp  result.hpp
BandAccount/src/: account.cpp  app.cpp
BandAccount/tests/: account_test.cpp  change_test.cpp
BankAccount/: CMakeLists.txt  README.md  main.cpp
BankAccount/include/: account.hpp  app.hpp  options.hpp  result.hpp  storage_object.hpp  tools.hpp
BankAccount/src/: account.cpp  app.cpp
BankAccount/tests/: account_test.cpp  app_test.cpp  change_test.cpp  result_test.cpp
Console/: Console.cpp  Vec.h  main.cc
Course/: CMakeLists.txt  README.md
Course/Test/: 1.c  2.c  3.c  CMakeLists.txt
Course/Week1/: 1.c  2.c  3.c  4.c  5.c  6.cpp  CMakeLists.txt  other.cpp  problems.txt
Course/Week2/: 1.c  2.c  3.c  4.c  5.c  6.c  CMakeLists.txt  problems.txt
Course/Week3/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  21.c  22.c  23.c  24.c  25.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  problems.txt
Course/Week3/Test/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  9.c  CMakeLists.txt
Course/Week4/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  20.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  problems.txt
Course/Week5/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  problems.txt
Course/Week6/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  problems.txt
Course/Week7/: 1.c  2.c  CMakeLists.txt  problems.txt
Cs/: Cs.csproj  Program.cs
Cs/Properties/: AssemblyInfo.cs
EducationalAdministration/: App.h  CMakeLists.txt  README.md  _student.txt  main.cpp  util.h
EducationalAdministration/privilege/: Modifiable.h  Privilege.h  Readable.h  SelfReadable.h
EducationalAdministration/storage/: Course.h  Storage.h  StorageItem.h  Student.h  Teacher.h
EducationalAdministration/user/: AdminUser.h  StudentUser.h  TeacherUser.h
EducationalAdministration/vs/EducationalAdministration/EducationalAdministration/: _course.txt  _student.txt  _teacher.txt
LinkList/: CMakeLists.txt  LinkList.cpp  LinkList.h  LinkList.unittest.cpp  LinkList.vcxproj  LinkList.vcxproj.filters  Score.cpp  StudentMgr.cpp  StudentMgr.h  main.cpp
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Matrix/: CMakeLists.txt  Matrix.h  Matrix.vcxproj  Matrix.vcxproj.filters  Matrix_unittest.cpp  VMatrix.h
String/: CMakeLists.txt  String.h  String.vcxproj  String_unittest.cpp  cildhdi.vcxproj.filters
StudentMgr/: Student.h  StudentMgr.cpp  StudentMgr.h  main.cpp  student.txt
bm/: CMakeLists.txt  main.cpp
cildhdi/: String.h  String_unittest.cpp  cildhdi.vcxproj
codewars/: CMakeLists.txt
codewars/ga-de-ry-po-lu-ki-cypher-vol-2/: main.cpp
codewars/rainfall/: CMakeLists.txt
ga-de-ry-po-lu-ki-cypher-vol-2/: CMakeLists.txt  main.cpp
rainfall/: main.cpp
scripts/: build.sh  build_and_test.sh  install_gtest.sh  install_igloo.sh  install_vcpkg.sh  run_tests.sh
string-pyramid/: CMakeLists.txt  main.cpp
