add_subdirectory(Test)
add_executable(3.1 1.c)
add_executable(3.2 2.c)
add_executable(3.3 3.c)
add_executable(3.4 4.c)
add_executable(3.5 5.c)
add_executable(3.6 6.c)
add_executable(3.7 7.c)
add_executable(3.8 8.c)
add_executable(3.9 9.c)
add_executable(3.10 10.c)
target_link_libraries(3.10 m)
add_executable(3.11 11.c)
add_executable(3.12 12.c)
target_link_libraries(3.12 m)
add_executable(3.13 13.c)
add_executable(3.14 14.c)
add_executable(3.15 15.c)
add_executable(3.16 16.c)
add_executable(3.17 17.c)
add_executable(3.18 18.c)
add_executable(3.19 19.c)
add_executable(3.20 20.c)
add_executable(3.21 21.c)
add_executable(3.22 22.c)
add_executable(3.23 23.c)
target_link_libraries(3.23 m)
add_executable(3.24 24.c)
add_executable(3.25 25.c)