add_executable(4.1 1.c)
add_executable(4.2 2.c)
add_executable(4.3 3.c)
add_executable(4.4 4.c)
add_executable(4.5 5.c)
add_executable(4.6 6.c)
add_executable(4.8 8.c)
add_executable(4.9 9.c)
add_executable(4.10 10.c)
add_executable(4.11 11.c)
add_executable(4.12 12.c)
add_executable(4.13 13.c)
add_executable(4.14 14.c)
add_executable(4.15 15.c)
add_executable(4.16 16.c)
add_executable(4.17 17.c)
add_executable(4.18 18.c)
add_executable(4.19 19.c)
add_executable(4.20 20.c)